# fastvec

./: .editorconfig  CMakeLists.txt  LICENSE
include/: fastvec.hpp
test/: CMakeLists.txt  emplaceback.cpp  pushpop.cpp
